--- a/styles/global.css
+++ b/styles/global.css
@@ -32,8 +32,12 @@ img {
     background-color: #fdf6e3;
     border-radius: 0.3em;
     margin: 0.5em 0;
-    padding: 1em;
+    padding: 2em 1em 1em;
     overflow: auto;
+    background-image: url(/images/window-buttons.png);
+    background-repeat: no-repeat;
+    background-size: 44px 10px;
+    background-position: 16px 14px;
 }
 
 .gatsby-highlight pre[class*="language-"] {
